Add precision and type format, add wchar tests Nested width/precision is not supported `wchar_t` tests are copy of existing ones with different type Hex test is disabled as `fpm` implementation differs from `double` one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(fpm-test20
   #tests/power.cpp
   #tests/trigonometry.cpp
   tests/formatting.cpp
+  tests/formatting_wchar.cpp
 )
 set_target_properties(fpm-test20 PROPERTIES CXX_STANDARD 20)
 target_link_libraries(fpm-test20 PRIVATE fpm gtest_main)
